# icelandic-language-model

./: .dockerignore  .gitignore  01_fetch_data.py  02_bytelevel_tokenizer.py  03_train_roberta.py  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
azure/: create_vm.sh  delete_vm.sh  docker-ubuntu.json  docker-ubuntu.sh  nvidia-docker.json  nvidia-docker.sh
language_model/: config.py  storage.py  tokenizer.py  train_icelandic_model.py  train_tokenizer.py  utils.py
language_model/icelandic/: merges.txt  vocab.json
language_model/notebooks/: icelandic_model.ipynb
src/: 01_02_fetch_data_tokinzer.py  01_fetch_data.py  02_bytelevel_tokenizer.py  03_train_roberta.py  main.py  prepare_more_data.py  train_maskedLM.py  train_ner.py  train_ner_xml_roberta.py
src/language_model/: IsRoBERTa.py  NER.py  config.py  storage.py  tokenizer.py
src/language_model/MaskedLM/: IsRoBERTa.py  tokenizer.py
src/language_model/NER/: IsRoBERTa.py  XLM-RoBERTa.py  XLM_RoBERTa.py  config.json  dataset.py  malfong.py  preprocess.py  test.txt  testing.ipynb  train_tags.txt  types.py  utils.py
src/language_model/NER/Malfong_datasets/: fetch_data.py  labels_sentence_num.py  malfong.py  train_test_split.py
src/language_model/dataset/: oscar.py
src/language_model/dataset/malföng_NER/: fetch_malföng.py  preprocess.py  train_test_split.py
src/language_model/lib/: azure_storage.py  log.py
src/onnx/: mask_onnx.py  ner_onnx.py
